--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f5f5f5;
-    color: #333;
+    background: linear-gradient(black, maroon);
+    color: #000000;
 }
 
 header {
-    background: linear-gradient(to top, #1e3c72, #2a5298);
+    background: linear-gradient(to right, red, darkred);
     color: white;
     padding: 30px 20px;
     text-align: center;
@@ -51,7 +51,8 @@ section {
     max-width: 1000px;
     margin: auto;
     margin-bottom: 30px;
-    background-color: rgb(230, 230, 230);
+    background: linear-gradient(to right, coral, red);
+    border: solid rgb(53, 0, 0) 10px;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
@@ -70,7 +71,7 @@ section {
     display: grid;
     place-items: center;
     margin-bottom: 30px;
-    background-color: white;
+    background-color:rgb(255, 200, 200);
     padding: 50px;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -79,6 +80,7 @@ section {
 #portfolio img {
     width: 500px;
     height: auto;
+    border: solid rgb(53, 0, 0) 5px;
     border-radius: 5px;
     margin-bottom: 10px;
 }
@@ -109,7 +111,7 @@ section {
 
 
 #contacts a {
-    color: #2a5298;
+    color: #380000;
     text-decoration: none;
 }
 
@@ -118,7 +120,7 @@ section {
 }
 
 footer {
-    background-color: #2a5298;
+    background-color: #982a2a;
     color: white;
     text-align: center;
     padding: 20px 10px;
@@ -190,16 +192,16 @@ footer {
 .open-window {
     margin-top: 10px;
     padding: 12px 12px;
-    background-color: #2a5298;
+    background-color: hsl(0, 100%, 27%);
     color: white;
     font-size: large;
-    border: none;
+    border: solid rgb(53, 0, 0) 5px;
     border-radius: 5px;
     cursor: pointer;
     transition: transform 0.2s ease, background-color 0.2s ease;
 }
 
 .open-window:hover {
-    background-color: #1e3c72;
+    background-color: hsl(0, 100%, 27%);
     transform: scale(1.1);
 }
